[Win] Clipboard tests are flaky. https://bugs.webkit.org/show_bug.cgi?id=167088

Reviewed by Brent Fulgham.

Tests involving the clipboard are flaky when running with multiple DRTs, since the clipboard is global.
We can fix this by assigning each DRT a separate window station (each window station has its own clipboard).

* DumpRenderTree/win/DumpRenderTree.cpp:
(main):


Canonical link: https://commits.webkit.org/184203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210850 268f45cc-cd09-0410-ab3c-d52691b4dbfc